<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.rank.ListTableFragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="32dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/index"
            android:textSize="22sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/id"
            android:textSize="22sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/points"
            android:textSize="22sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/country"
            android:textSize="22sp" />
    </TableRow>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/score_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.appcompat.widget.LinearLayoutCompat>