<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/filter"
        android:textSize="24sp" />


    <ListView
        android:id="@+id/lv_multiple"
        android:layout_width="match_parent"
        android:layout_height="180dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/sorted_by"
        android:textSize="24sp" />


    <ListView
        android:id="@+id/lv_single1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/classify_by"
        android:textSize="24sp" />


    <ListView
        android:id="@+id/lv_single2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
    <!--<badge xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    &lt;!&ndash;    style="@style/Widget.Material3.Badge"&ndash;&gt;-->
    <!--    &lt;!&ndash;    app:badgeGravity="TOP_END"&ndash;&gt;-->
    <!--    &lt;!&ndash;    app:badgeWidePadding="8dp"&ndash;&gt;-->
    <!--    &lt;!&ndash;    app:badgeWithTextHeight="24dp"&ndash;&gt;-->
    <!--    &lt;!&ndash;    app:badgeWithTextWidth="24dp"&ndash;&gt;-->
    <!--    &lt;!&ndash;    app:horizontalOffset="20dp"&ndash;&gt;-->
    <!--    &lt;!&ndash;    app:maxCharacterCount="3"&ndash;&gt;-->
    <!--    &lt;!&ndash;    app:verticalOffset="20dp" />&ndash;&gt;-->
